--- a/css-selectors/style.css
+++ b/css-selectors/style.css
@@ -1,7 +1,10 @@
-.synopsis { color: #7E8184;
+p:first-of-type { color: #7E8184;
     font-style: italic;}
 
-.button {
+.button:link,
+.button:visited
+{display: block;
+    text-decoration: none;
     color: #FFF;
     background-color: #5995DA;
     font-weight: bold;
@@ -14,10 +17,26 @@
     margin: 20px auto;
 }
 
-.call-to-action{
+.button:hover,
+.button:visited:hover { color: #FFF; background-color: #76AEED;}
+
+.button:active,
+.button:visited:active { color: #FFF; background-color: #5995DA;}
+
+#button-2 {color: #5D6063;}
+
+.call-to-action:link,
+.call-to-action:visited { 
     font-style: italic;
     background-color: #EEB75A;
 }
+
+.call-to-action:hover,
+.call-to-action:visited:hover { background-color: #F5CF8E;}
+
+.call-to-action:active,
+.call-to-action:visited:active { background-color: #EEB75A;}
+
 
 .page {
     width: 600px;
@@ -32,3 +51,4 @@ a:active {color: red;}
 a:visited:hover { color: orange;}
 a:visited:active { color: red;}
 
+p:last-of-type { margin-bottom: 50px;}
