--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ box-sizing: border-box;}
     border: 1px solid red;
 }
 
-.menu { height: 100px; background-color: #B2D6FF;}
-.sidebar {float: left; width: 200px; height: 300px; background-color: #F09A9D;}
+.menu { height: 100px; 
+    background-color: #B2D6FF;
+}
+
+.sidebar {float: left; 
+    width: 200px; 
+    height: 300px; 
+    background-color: #F09A9D;
+}
 
 .content {float: left;
     width: 650px; 
