--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -3,6 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+.header {
+    height: auto;
+    justify-content: inherit;
+    align-items: inherit;
+}
+
+.photo img {
+    width: 100%;
+    display: block;
+}
+
 
 /*mobile Styles*/
 
@@ -97,3 +108,11 @@ height: 80px;}
 }
 
 
+.illustration { 
+    width: 100%;
+}
+
+.illustration img {
+    width: 100%;
+    display: block;
+}
